# enterprise_customer_support_automation

./: .gitignore  Dockerfile  README.md  api.py  create_db.py  eval.py  frontend.py  pyproject.toml  requirment.txt
.github/workflows/: deploy.yml
src/support_bot/: crew.py  main.py
src/support_bot/config/: agents.yaml  tasks.yaml
src/support_bot/tools/: rag_tool.py
